group 'com.elcris.iot.wemo'
version '1.0.3'

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'application'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url "https://repo.eclipse.org/content/repositories/paho-releases/"
    }
    maven {
        url "http://maven.restlet.org"
    }
    flatDir {
        dirs 'libs'
    }
}

distZip {
    into(project.name+"-"+project.version) {
        from '.'
        include 'conf/*'
    }
}

mainClassName = "com.elcris.iot.wemo.MainServer"
applicationDefaultJvmArgs = ["-XX:+UseParNewGC","-XX:+UseConcMarkSweepGC","-XX:MaxNewSize=32M","-XX:NewSize=32M","-Xms96M","-Xmx96M"]

dependencies {
    compile fileTree(dir: 'libs', include: '*.jar')
    //compile name : 'cybergarage-upnp-core-2.1.1'
    compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.0.2'
    compile group: 'org.restlet.jse', name: 'org.restlet', version: '2.3.6'
    compile group: 'org.restlet.jse', name: 'org.restlet.ext.json', version: '2.3.6'
    compile group: 'org.slf4j', name: 'slf4j-simple', version:'1.7.18'
    compile 'com.pubnub:pubnub:3.7.5'
    testCompile group: 'junit', name: 'junit', version: '4.11'
}
